<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">Map</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofence</string>
    <string name="remove_geofences">Remove geofence</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="selected_wifi">Selected WIFI:</string>
    <string name="radius">Radius:</string>
    <string name="select_wifi">Select WIFI</string>
    <string name="none">None</string>
    <string name="no_wifi_points">No accessible wifi points</string>
    <string name="cancel">Cancel</string>
</resources>
